changes in settings

--- a/src/app/home/ads/ads.component.html
+++ b/src/app/home/ads/ads.component.html
@@ -1,6 +1,6 @@
-
 <div class="container">
   <div class="img-fluid" >
-      <img [src]="adsModel[0].adsImageName" class="imageSize" style="height: 300px; width:750px;">
+    <h3> The Best Furniture Range</h3>
+      <img [src]="adsModel[0].adsImageName" class="img-fluid">
   </div>
 </div>
