--- a/src/app/home/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/home/terms-and-conditions/terms-and-conditions.component.html
@@ -1,3 +1,59 @@
-<p>
-  terms-and-conditions works!
-</p>
+<br>
+<div class="eleMent-contai">
+  <div class="row">
+      <div class="col-md-4" *ngFor="let data of termsModel">
+          <h1 class="condaiTions">
+            {{ data.heading}}
+          </h1>
+          <p class="teRms" >
+            {{data.details}}
+   
+         </p>
+           
+       </div>
+    <!-- <div class="col-md-4" >
+       <h1 class="condaiTions">
+       TERMS & CONDITIONS
+       </h1>
+       <p class="teRms">
+
+        Looking Good Furniture offers this website, including all information and services available from this site to you, the user, conditioned upon your acceptance of all terms and conditions, policies and notices stated here. If you do not agree to all the terms and conditions of this agreement, then you may not access the website.</p>
+        
+       <p class="teRms">We are not responsible if information made available on this site is not accurate, complete or current. The material on this site is provided for general information only and should not be relied upon or used as the sole basis for making decisions without consulting primary, more accurate, more complete or more timely sources of information. Any reliance on the material on this site is at your own risk.</p>
+        
+       <p class="teRms">This site may contain certain historical information. Historical information, necessarily, is not current and is provided for your reference only. We reserve the right to modify the contents of this site at any time, but we have no obligation to update any information on our site. You agree that it is your responsibility to monitor changes to our site.</p>
+        
+      <p class="teRms"> Our products are subject to change without notice. We reserve the right at any time to modify or discontinue any product without notice at any time. We shall not be liable to you or to any third-party for any modification, price change, suspension or discontinuance of the product.</p>
+        
+       <p class="teRms">We have made every effort to display as accurately as possible the colors and images of our products that appear at our store. We cannot guarantee that your computer monitor’s display of any color will be accurate.</p>
+        
+      <p class="teRms"> We reserve the right, but are not obligated, to limit the sales of our products or services to any person, geographic region or jurisdiction. We may exercise this right on a case-by-case basis. We reserve the right to limit the quantities of any products or services that we offer. All descriptions of products are subject to change at any time without notice, at the sole discretion of us. Any offer for any product or service made on this site is void where prohibited.</p>
+        
+        
+    </div> -->
+   <!--  <div class="col-md-4">
+        <h1 class="condaiTions"> THIRD-PARTY LINKS</h1>
+      <p class="teRms"> Certain content, products and services available via our website may include materials from third-parties.</p>
+        
+      <p class="teRms"> Third-party links on this site may direct you to third-party websites that are not affiliated with us. We are not responsible for examining or evaluating the content or accuracy and we do not warrant and will not have any liability or responsibility for any third-party materials or websites, or for any other materials, products, or services of third-parties.</p>
+        
+      <p class="teRms"> We are not liable for any harm or damages related to the purchase or use of goods, services, resources, content, or any other transactions made in connection with any third-party websites. Please review carefully the third-party’s policies and practices and make sure you understand them before you engage in any transaction. Complaints, claims, concerns, or questions regarding third-party products should be directed to the third-party.</p>
+    </div> -->
+
+   <!--  <div class="col-md-4">
+
+        <h1 class="condaiTions"> ERRORS, INACCURACIES </h1>
+       <p class="teRms">ccasionally there may be information on our site that contains
+           typographical errors, inaccuracies or omissions that may rel
+            to product descriptions, promotions, offers, and availability. 
+            We reserve the right to correct any errors, inaccuracies or omissions,
+             and to change or update information if any information is inaccurate at any time without prior notice.</p>
+        
+       <p class="teRms">We undertake no obligation to update, amend or 
+          clarify information on the website except as required by law. 
+          No specified update or refresh date applied in the website, should be taken to
+           indicate that all information in the website has been modified or updated.</p>
+    </div> -->
+
+  </div>
+</div>
