--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -87,7 +87,7 @@
       <div class="col-xs-12 col-6 col-md-2">
         <h6>The Company</h6>
         <ul class="list-unstyled">
-          <li><a href="maintenance.html">About Us</a></li>
+          <li><a  routerLink="/home/aboutus">About Us</a></li>
       <!-- 
           <li><a href="about.html">Terms & Conditions</a></li> -->
         </ul>
@@ -96,7 +96,7 @@
         <h6>Information </h6>
         <ul class="list-unstyled">
             <li><a routerLink="/home/contact">Contact</a></li>
-          <li><a routerLink="/home/privacypolicy">Privact Policy</a></li>
+          <li><a routerLink="/home/privacypolicy">Privacy Policy</a></li>
           <li><a routerLink="/home/termsandconditions">Terms & Use</a></li>
           <li><a routerLink="/home/faq">FAQ</a></li>
         </ul>
