--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -82,13 +82,13 @@
             </ul>
           </li>
           <div class="logIns">
-            <li class="nav-item" *ngIf="!this.sharedService.getLogin()">
+            <li class="nav-item" >
               <a class="nav-link navText" routerLink="/home/buyinbulk" style="color: rgb(0, 0, 0);"><b>Buy in
                   Bulk</b></a>
             </li>
           </div>
           <div class="logIns">
-            <li class="nav-item" *ngIf="!this.sharedService.getLogin()">
+            <li class="nav-item" >
               <a class="nav-link navText" routerLink="/home/support" style="color: rgb(0, 0, 0);"><b>Support</b></a>
             </li>
           </div>
