--- a/src/app/product-management/product-detail/product-detail.component.css
+++ b/src/app/product-management/product-detail/product-detail.component.css
@@ -1,3 +1,160 @@
+.img-responsive{
+  width: 600px;
+  height: 400px;
+}
+.btns{
+  padding-top: 50px;
+}
+
+.btnss{
+  padding-top: 50px;
+  width: 100px;
+  padding: 50px;
+}
+.card-footer
+{
+  width: 150px;
+  border: 0px;
+  border-radius: 20px;
+  padding: 2px;
+  color:  rgb(255, 255, 255);
+  
+ 
+}
+.card-footers
+{
+  box-shadow: 0 1px 18px 0 #1412123f, 0 0px 3px 0 rgba(133, 133, 133, 0.212);
+  background-color: rgb(128, 128, 133);
+  border-radius: 0px;
+  margin-bottom: 20px;
+  width: 150px;
+  color: rgb(0, 0, 0);
+ 
+}
+i{
+  padding-left: 10px;
+}
+
+.pageBoxLg {
+border: 1px solid blueviolet;
+margin: 20px 20px 20px 20px;
+padding: 20px;
+position: relative;
+background: #fff;
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.pageBoxLg-label {
+background: rosybrown;
+margin: 0px 0px 0px 20px;
+font-size: 14px;
+padding: 2px 20px 2px 20px;
+color: white;
+transition: padding 3s;
+-moz-transition: padding 3s;
+-webkit-transition: padding 3s;
+}
+
+.images:hover {
+border: 1px solid blue;
+/* border-radius: 25px; */
+}
+
+.detailsView {
+margin-top: 20px;
+border-left: 0.3px solid #8787;
+}
+
+
+
+.relatedSection {
+color: rgb(104, 104, 104);
+}
+
+.showImages {
+padding-top: 20px;
+width: 100%;
+padding-left: 15px;
+}
+
+.img-fluids {
+height: 450px;
+width: 390px;
+}
+
+.img-fluidss {
+height: 450px;
+width: 390px;
+
+}
+
+.img-fluidsss {
+height: 60px;
+width: 62px;
+
+}
+
+.ras-btn {
+width: 100px;
+height: 100px;
+}
+
+.img-fluid {
+height: 250px;
+width: 200px;
+
+}
+
+.vat-btn {
+
+width: 200px;
+height: 250px;
+
+
+}
+
+.variants {
+width: 350px;
+border: 2px;
+border-radius: 100px;
+
+
+}
+.zoom {
+transition: transform .2s;
+margin: 0 auto;
+}
+
+.zoom:hover {
+-ms-transform: scale(0.8);
+-webkit-transform: scale(0.8); 
+transform: scale(0.8); 
+}
+
+.zoom1 {
+transition: transform .6s;
+margin: 0 auto;
+}
+
+.zoom1:hover {
+-ms-transform: scale(0.8);
+-webkit-transform: scale(0.8); 
+transform: scale(0.8); 
+}
+.var-btnn{
+padding: 30px;
+}
+.zoom2 {
+transition: transform .6s;
+margin: 0 auto;
+}
+
+.zoom2:hover {
+-ms-transform: scale(1.8);
+-webkit-transform: scale(1.5); 
+transform: scale(1.1); 
+}
+
 .pageBoxLg {
   border: 1px solid blueviolet;
   margin: 20px 20px 20px 20px;
@@ -7,7 +164,56 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.pageBoxLg-label {
+
+@media screen and (max-width: 900px) {
+
+  .img-responsive{
+    width: 250px;
+    height: 100px;
+  }
+  .btns{
+    padding-top: 50px;
+  }
+  
+  .btnss{
+    padding-top: 50px;
+    width: 100px;
+    padding: 50px;
+  }
+  .card-footer
+  {
+    width: 150px;
+    border: 0px;
+    border-radius: 20px;
+    padding: 2px;
+    color:  rgb(255, 255, 255);
+    
+   
+  }
+  .card-footers
+  {
+    box-shadow: 0 1px 18px 0 #1412123f, 0 0px 3px 0 rgba(133, 133, 133, 0.212);
+    background-color: rgb(128, 128, 133);
+    border-radius: 0px;
+    margin-bottom: 20px;
+    width: 150px;
+    color: rgb(0, 0, 0);
+   
+  }
+  i{
+    padding-left: 10px;
+  }
+  
+  .pageBoxLg {
+  border: 1px solid blueviolet;
+  margin: 20px 20px 20px 20px;
+  padding: 20px;
+  position: relative;
+  background: #fff;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  
+  .pageBoxLg-label {
   background: rosybrown;
   margin: 0px 0px 0px 20px;
   font-size: 14px;
@@ -16,116 +222,116 @@
   transition: padding 3s;
   -moz-transition: padding 3s;
   -webkit-transition: padding 3s;
-}
-
-.images:hover {
+  }
+  
+  .images:hover {
   border: 1px solid blue;
   /* border-radius: 25px; */
-}
-
-
-
-
-.relatedSection {
+  }
+  
+  .detailsView {
+  margin-top: 20px;
+  border-left: 0.3px solid #8787;
+  }
+  
+  
+  
+  .relatedSection {
   color: rgb(104, 104, 104);
-}
-
-.showImages {
+  }
+  
+  .showImages {
   padding-top: 20px;
   width: 100%;
   padding-left: 15px;
-}
-
-
-.zoom .img-responsive{
-  height: 455px;
-  width: 710px;
-}
-.zoom1 .img-responsive{
-  height: 455px;
-  width: 710px;
-}
-.mat-big{
-  width: 735px;
-
-}
-.img-fluidsss {
-  height: 100px;
-  width: 130px;
-  opacity: 0.5;
- 
-}
-
-.ras-btn:hover .img-fluidsss {
-  opacity: 5;
-}
-
-.ras-btn {
-  width: 150px;
-  height: 100px;
-  padding-left: 10px;
-}
-.small{
+  }
   
-  padding: 10px;
-  padding-left: 10px;
-}
-.img-fluid {
+  .img-fluids {
+  height: 450px;
+  width: 390px;
+  }
+  
+  .img-fluidss {
+  height: 450px;
+  width: 390px;
+  
+  }
+  
+  .img-fluidsss {
+  height: 60px;
+  width: 62px;
+  
+  }
+  
+  .ras-btn {
+  width: 100px;
+  height: 100px;
+  }
+  
+  .img-fluid {
   height: 250px;
   width: 200px;
-
-}
-
-.vat-btn {
-
+  
+  }
+  
+  .vat-btn {
+  
   width: 200px;
   height: 250px;
- 
-
-}
-
-.variants {
+  
+  
+  }
+  
+  .variants {
   width: 350px;
   border: 2px;
   border-radius: 100px;
-}
-.zoom {
-  transition: transform .8s;
+  
+  
+  }
+  .zoom {
+  transition: transform .2s;
   margin: 0 auto;
-}
-.zoom:hover {
-  -ms-transform: scale(1);
-  -webkit-transform: scale(1.1); 
-  transform: scale(0.9); 
-}
-
-.zoom1 {
-  transition: transform .6s;
-  margin: 0 auto;
-}
-
-.zoom1:hover {
+  }
+  
+  .zoom:hover {
   -ms-transform: scale(0.8);
   -webkit-transform: scale(0.8); 
   transform: scale(0.8); 
-}
-.var-btnn{
-  padding: 30px;
-}
-.zoom2 {
+  }
+  
+  .zoom1 {
   transition: transform .6s;
   margin: 0 auto;
-}
-
-.zoom2:hover {
+  }
+  
+  .zoom1:hover {
+  -ms-transform: scale(0.8);
+  -webkit-transform: scale(0.8); 
+  transform: scale(0.8); 
+  }
+  .var-btnn{
+  padding: 30px;
+  }
+  .zoom2 {
+  transition: transform .6s;
+  margin: 0 auto;
+  }
+  
+  .zoom2:hover {
   -ms-transform: scale(1.8);
   -webkit-transform: scale(1.5); 
   transform: scale(1.1); 
-}
- .mat-big{
-  box-shadow: 0 1px 28px 0 #00000033, 0 0px 2px 0 rgba(0, 0, 0, .19);
-  background-color: #fff;
-  border-radius: 0px;
-  margin-bottom: 10px;
-  padding: 10px;
+  }
+  
+  .pageBoxLg {
+    border: 1px solid blueviolet;
+    margin: 20px 20px 20px 20px;
+    padding: 20px;
+    position: relative;
+    background: #fff;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+
+
 }
