--- a/src/app/product-management/product-detail/product-detail.component.html
+++ b/src/app/product-management/product-detail/product-detail.component.html
@@ -1,11 +1,12 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12 col-sm-12 col-md-4 col-lg-6">
-      <div class="row" style="padding-top: 20px; width: 100%;">
+      <div class="row" >
         <div class="col-12 col-sm-12 col-md-12 col-lg-12" style="padding-top: 20px; width: 100%;">
           <div class="mat-big">
             <div *ngIf="!primeHide">
               <div class="zoom">
+             
                 <img [src]="productModel?.productImageName[0]" class="img-responsive">
               </div>
             </div>
