--- a/src/app/shared/strips/strips.component.html
+++ b/src/app/shared/strips/strips.component.html
@@ -1,18 +1,14 @@
-<!-- {{stripEnable}} -->
- <div class="image" [ngClass]="stripEnable">
+<div class="image" [ngClass]="stripEnable">
         <div class="container">
                 <div class="row">
-                        <div class="col-md-2"></div>
-                        <div class="col-md-6">
-                                <h6 class="stripText"><button > HoursFree</button>  Express
+                        <div class="col-md-10  col-10">
+                                <h6 class="stripText"><button>48 Hours</button> Express
                                         Delivery in Bangalore!<span> SofaCreator</span> Now in Your
                                         <span>City</span></h6>
-                                <div class="col-md-2"> </div>
                         </div>
-                        <div class="col-md-2">
-                                <h5 (click)="test()" class="exIt">x</h5>
+                        <div class="col-md-2 col-1">
+                                <h6 (click)="test()" class="exIt">X</h6>
                         </div>
-                </div><button mat-raised-button color="primary">Primary</button>
-
+                </div>
         </div>
-</div> 
+</div>
