--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 
 <div class="container-fluid">
+    <app-strips></app-strips>
 <app-nav></app-nav>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
